--- a/Microwave.Test.Integration/Microwave.Test.Integration.csproj
+++ b/Microwave.Test.Integration/Microwave.Test.Integration.csproj
@@ -58,6 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Step2.cs" />
+    <Compile Include="Step1.cs" />
+    <Compile Include="Step4Maybe.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
