Stepped up to step 8.

--- a/Microwave.Test.Integration/Microwave.Test.Integration.csproj
+++ b/Microwave.Test.Integration/Microwave.Test.Integration.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Step1.cs" />
     <Compile Include="Step4.cs" />
     <Compile Include="Step3.cs" />
+    <Compile Include="Step8.cs" />
     <Compile Include="Step7.cs" />
     <Compile Include="Step6.cs" />
     <Compile Include="Step5.cs" />
