--- a/Microwave.Test.Integration/Microwave.Test.Integration.csproj
+++ b/Microwave.Test.Integration/Microwave.Test.Integration.csproj
@@ -62,8 +62,8 @@
     <Compile Include="Step1.cs" />
     <Compile Include="Step4.cs" />
     <Compile Include="Step3.cs" />
-    <Compile Include="Step12.cs" />
-    <Compile Include="Step11.cs" />
+    <Compile Include="Step10_12.cs" />
+    <Compile Include="Step7_11.cs" />
     <Compile Include="Step9.cs" />
     <Compile Include="Step6.cs" />
     <Compile Include="Step5.cs" />
